# search-engine

./: .gitignore  README.md
Crawler/: CMakeLists.txt  Page.cpp  main.cpp  test.cpp  testsql.cpp
Crawler/DocumentRepository/: Document.cpp  Document.hpp  DocumentRepository.cpp  DocumentRepository.hpp
Crawler/LinkInfo/: LinkInfo.cpp  LinkInfo.hpp  LinkInfoRepository.cpp  LinkInfoRepository.hpp  LinkStatus.hpp
Crawler/PageLoader/: CMakeLists.txt  Page.cpp  Page.hpp  PageLoader.cpp  PageLoader.hpp  test.cpp
Crawler/Parser/: Parser.cpp  Parser.hpp
Crawler/WebsiteRepository/: Website.cpp  Website.hpp  WebsiteRepository.cpp  WebsiteRepository.hpp  WebsiteStatus.hpp
Search/: CMakeLists.txt  main.cpp
Search/Server/: CMakeLists.txt  Server.cpp  Server.hpp
Search/Server/Search/: CMakeLists.txt  Search.cpp  Search.hpp
Search/Server/Search/SearchResult/: CMakeLists.txt  SearchResult.cpp  SearchResult.hpp
UserInterface/: CMakeLists.txt  main.cpp
UserInterface/Client/: CMakeLists.txt  Client.cpp  Client.hpp
UserInterface/Client/SearchResult/: CMakeLists.txt  SearchResult.cpp  SearchResult.hpp
UserInterface/UserInterface/: CMakeLists.txt  ConsoleUI.cpp  ConsoleUI.hpp  UserInterface.hpp
